gulp/assets/stylesheets/modules/_base.scss
body{
  background-color: $white;
}

/* Headings */
h2{
  &.form-heading{
    text-align: center;
    font-size: 2rem;
    padding: 4rem 0;
    i{
      font-size: 2rem;
      margin-right: 0.75rem;
    }
  }
}

/* Forms */
form {
  label{
    font-size: 1rem;
  }
  input{
    font-size: 1rem;
  }
  button[type="submit"]{
    &.button{
      padding: 0.2rem 4.5rem;
      i{
        font-size: 3rem;
      }
    }
  }
}




.pagination {
  border-radius: 30px;
  background: lighten($light-gray, 6%);
  a, button {
    border-radius: 0; 
    line-height: inherit;
    line-height: 30px;
    &:hover {
      text-decoration: underline;
      background: none;
      color: $primary-color;
    }
  }
  .current {
      border-radius: 30px;
      width: 30px;
      height: 30px;
      background: $light-gray;

      a { 
        padding: 0; 
        color: $dark-gray; 
        cursor: default; 
        text-decoration: none;
      }
  }
}


.edit-header {
  background-color: rgba($primary-color, 0.2);
  height: 3.5rem;
  line-height: 3.5rem;
  .edit-headline {
    color: $primary-color;
    position: absolute;
    left: 1.5rem;
    i { margin-right: 0.5rem; }
  }

  ul{
    text-align: right;
    margin: 0;
    list-style: none;
    line-height: 3.5rem;
    li{
      display: inline-block;
      position: relative;
      button.has-tip { border-bottom: none; cursor: pointer;}
      .button {
        margin: 0;
        display: block;
        background: none;
        outline: none;
        color: rgba($primary-color, 0.5);
        i {
          font-size: 1.5rem;
        }
        &:hover, &:focus {
          color: $primary-color;
        }
        &.discard {
          color: rgba($black, 0.5);
           &:hover, &:focus {
            color: $black;
          }
        }
        &.delete {
          color:  rgba(map-get($foundation-palette, alert), 0.5);
          &:hover, &:focus {
            color: map-get($foundation-palette, alert);
          }
        }
      }
      &.submit {
        width: 5rem;
        margin: 0 1rem;
        .button-prime {
          position: absolute;
          top: -3rem;
        }
      }
    }
  }
}


.detail-header {

  position: relative;
  background: $light-gray;
  text-align: center;
  padding: 4rem 0 1rem 0;
  margin: 1rem 0;


  > .title, > .headline input {
    font-size: 2rem;
    font-weight: 200;
    padding: 1rem 5rem 0 5rem;
    text-align: center;
    position: relative;
  }

  .headline{
    position: relative;
    &:hover label { opacity: 1; }
  }

  > .description {
    position: relative;
    padding: 0 5rem 3rem 5rem;
    &:hover label { opacity: 1; }
  }

  .type {
    position: absolute;
    left: 1rem;
    top: 1rem;
    &:nth-child(2) { left: 7rem; }
    &:nth-child(3) { left: 14rem; }
    &:nth-child(4) { left: 21rem; }
    &:nth-child(5) { left: 27rem; }
    &:nth-child(6) { left: 37rem; }
    &:nth-child(7) { left: 44rem; }
    &:nth-child(8) { left: 51rem; }
  }

  .bookmark {
    position: absolute;
    right: 1rem;
    top: -4px;
    color: $dark-gray;
    .bookmarkinfo {
      font-size: 0.8rem;
      font-style: italic;
    }
    &:hover {
      color: $primary-color;
    }
    &.marked {
      color: $primary-color;
      i:before {
        content: "\f02e";
      }
    }
  }

  //.tags, .gueltigkeit {
  .gueltigkeit {
    text-align: left;
    margin: 0 0 0 1rem;
    .icon {
      color: $dark-gray;
    }
  }
  .daterange span.bis, .daterange span.icon, .gueltigkeit span.bis, .gueltigkeit span.icon  {
      color: $dark-gray;
  }
  .daterange span.bis,.gueltigkeit span.bis  {
      font-style: italic;
  }
  .daterange {
    &.focus {
      border-color: $primary-color;
      background: white;
      z-index: 10;
      input { 
        background: $white
       }
    }
    &:hover span {
     color: $primary-color;
    }
  }

  .edit {
    position: absolute;
    right: 1rem;
    bottom: 1rem;
    a span { display: block; text-indent: -9999px; }
  }

  label {
    opacity: 0;
    position: absolute;
    position: absolute;
    top: 0.2rem;
    left: 1rem;
    z-index: 12;
    color: $primary-color;
    transition: opacity ease-in-out 0.25s;
  }

  input, .ql-editor, .daterange {
    border: 1px solid $light-gray;
    background: $light-gray;
    outline: none;
    height: auto;
    line-height: 1;
    margin: 0;
    border-color: $light-gray;
    box-shadow: 0 0 2px $dark-gray;
    position: relative;
    z-index: 1;
    transition: box-shadow 0.5s, border-color 0.25s ease-in-out;
    &:hover {
      box-shadow: 0 0 7px $primary-color;
      z-index: 10;
    }
    &:focus {
      border-color: $primary-color;
      background: white;
      z-index: 10;
    }
  }

  .ql-editor {
    min-height: 375px;
  }

  &.editor {
    padding: 0;
    margin-top: 3rem;
      .type  {
        top: -2rem;
        opacity: 0.5;
        color: $dark-gray;
        left: 0.5rem;
      }
      .bookmark {
        display: none;
      }
      .headline input {
        padding: 1rem 5rem;
      }
      .description {
        padding: 0;
      }
      .daterange {
        .icon.validUntil {
          i {
            display: none;
          }
        }
        //padding: 1rem;
        .form-element {
          display: inline-block;
          input {
            box-shadow: none !important;
            border: 0 !important;
          }
          .single_error {
            left: 1rem;
            top: -2rem;
            right: auto;
          }
        }
      }
  }

}


.custom-select-title{
  padding-top: 0.5rem;
}
.custom-select{
  padding: 0 1rem 1rem 1rem;
  .v-select .selected-tag{
    background-color: rgba($primary-color, 0.2);
  }
}


.editor-block {
  position: relative;
  .ql-toolbar {
      position: absolute;
      z-index: 12;
      right: 0;
      border: 0;
  }
  .ql-editor {
    padding-top: 3rem;
    font-size: 1rem;
    text-align: center;
  }
  .ql-container.ql-snow {
    border: 0;
  }
  .ql-tooltip { z-index: 12; }
}

span.single_error {
    position: absolute;
    top: -3.3rem; 
    right: 2rem;
    background-color: map-get($foundation-palette, alert);
    padding: 0.5rem 1rem;
    color: white;
    border-radius: 5px;
    white-space: nowrap;
    z-index: 100;
    -webkit-transition: all 0.4s ease;
  }
  span.single_error:before {
    content: "";
    position: absolute;
    width: 0;
    height: 0;
    border-top: 20px solid map-get($foundation-palette, alert);
    border-left: 20px solid transparent;
    border-right: 20px solid transparent;
    -webkit-transition: all 0.4s ease;
    -moz-transition   : all 0.4s ease;
    left: 30%;
    bottom: -50%;
  }


.detail-header-wrapper {
  background: $white;
  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.10);

  .infolist {
    margin: 0;
    li { display: inline-block; margin-right: 1rem; }
  }
    .row {
    margin-bottom: 1rem;
  }

}

.detail-content {

  .image { 
    img {
      max-width: 100%; 
      border: solid 4px #fefefe;
      border-radius: 0;
       box-shadow: 0 0 0 1px rgba(51, 51, 51, 0.2);
    }
  }
  .video video {
    max-width: 100%;
    border: solid 4px #fefefe;
    border-radius: 0;
    box-shadow: 0 0 0 1px rgba(51, 51, 51, 0.2);
  }
  .stripes { 
    margin: 2rem 0 0 0; 
    text-align: center; 
    position: relative;
    background: repeating-linear-gradient( 45deg,  #fff, #fff 10px,  lighten($light-gray, 8%) 10px,  lighten($light-gray, 8%) 20px );
  }
  .images {
    max-width: 900px;
    margin: 2rem auto;
  }
}


.type{
  font-size: 1rem;
  font-weight: normal;
  &.bild {
      color: $ccpicture;
  }
  &.website {
      color: $ccwebsite;
  }
  &.video {
      color: $ccvideo;
  }
  &.text {
      color: $cctext;
  }
  &.social {
      color: $ccsocial;
  }
  &.print {
      color: $ccprint;
  }
  &.event {
      color: $ccevent;
  }
  &.content-einheit {
      color: $ccthema;
  }
}

.tags{
  .tag{
      display: inline-block;
      background-color: rgba($primary-color, 0.5);
      font-size: 0.8rem;
      color: $white;
      padding: 0 0.3rem;
      margin: 0 0.1rem;
      border-radius: $object-border-radius;
      i {
        font-size: 0.8rem;
        margin-left: 0.2rem;
      }
  }
  a.tag:hover {
      background-color: rgba($primary-color, 0.8);
  }
}

.longtext {
  max-width: 900px; 
  margin: 0 auto;
}

.reveal-overlay {
  background: none;
}
.reveal-blur {
    
  &.show {
    transition: all ease-out 0.1s;
    filter: blur(3px);
    opacity: 0.3;
  }
}

